dark mode fix

--- a/main.css
+++ b/main.css
@@ -1,6 +1,8 @@
 body {
   font-family: 'Noto Sans';
   background-color: #17191a;
+  width: 100%;
+  height: 100%;
 }
 
 .main-container {
